plugins/xpath/xpath-lang/testData/xpath2/highlighting/types/integerToString.xpath2
string-length(<error descr="Expected type 'xs:string?', got 'xs:integer'">1</error>)